infrastructure/controllers/base/pi-hole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app.kubernetes.io/name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pihole
  template:
    metadata:
      namespace: pihole
      labels:
        app.kubernetes.io/name: pihole
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: pihole
        image: pihole/pihole:2025.11.1
        volumeMounts:
          - name: pihole-volume
            mountPath: /etc/pihole
      volumes:
      - name: pihole-volume
        persistentVolumeClaim:
          claimName: pihole-storage
