infrastructure/controllers/base/pi-hole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  selector:
    app.kubernetes.io/name: pihole
  type: ClusterIP
  ports:
  - name: dns-tcp
    protocol: TCP
    port: 53
  - name: dns-udp
    protocol: UDP
    port: 53
  - name: http
    protocol: TCP
    port: 80
  - name: https
    protocol: TCP
    port: 443
