infrastructure/controllers/base/pi-hole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - pihole
  rules:
  - host: pihole
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: pihole
            port:
              number: 80
